@@ -6263,6 +6263,18 @@ show_sizeof (void)
 	show_sizeof_type (imaxdiv_t);
 	show_sizeof_type (ino_t);
 	show_sizeof_type (int);
+	show_sizeof_type (int16_t);
+	show_sizeof_type (int32_t);
+	show_sizeof_type (int64_t);
+	show_sizeof_type (int8_t);
+	show_sizeof_type (int_fast16_t);
+	show_sizeof_type (int_fast32_t);
+	show_sizeof_type (int_fast64_t);
+	show_sizeof_type (int_fast8_t);
+	show_sizeof_type (int_least16_t);
+	show_sizeof_type (int_least32_t);
+	show_sizeof_type (int_least64_t);
+	show_sizeof_type (int_least8_t);
 	show_sizeof_type (intmax_t);
 	show_sizeof_type (intptr_t);
 	show_sizeof_type (key_t);
@@ -6300,6 +6312,18 @@ show_sizeof (void)
 	show_sizeof_type (timer_t);
 	show_sizeof_type (time_t);
 	show_sizeof_type (uid_t);
+	show_sizeof_type (uint16_t);
+	show_sizeof_type (uint32_t);
+	show_sizeof_type (uint64_t);
+	show_sizeof_type (uint8_t);
+	show_sizeof_type (uint_fast16_t);
+	show_sizeof_type (uint_fast32_t);
+	show_sizeof_type (uint_fast64_t);
+	show_sizeof_type (uint_fast8_t);
+	show_sizeof_type (uint_least16_t);
+	show_sizeof_type (uint_least32_t);
+	show_sizeof_type (uint_least64_t);
+	show_sizeof_type (uint_least8_t);
 	show_sizeof_type (uintmax_t);
 	show_sizeof_type (uintptr_t);
 	show_sizeof_type (useconds_t);
